--- a/2024-03-19/authentification/server/package.json
+++ b/2024-03-19/authentification/server/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "mongoose": "^8.2.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0"
   }
 }
