--- a/Final_Project/Registry/client/package.json
+++ b/Final_Project/Registry/client/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-native-element-dropdown": "^2.10.4",
+    "react-router-dom": "^6.22.3",
+    "react-widgets": "^5.8.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
